--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server-dev": "nodemon ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,15 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "pg": "^7.4.1",
+    "pg-format": "^1.0.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "sequelize": "^4.33.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -33,6 +37,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^22.4.0",
+    "morgan": "^1.9.0",
     "nodemon": "^1.15.1",
     "webpack": "^3.11.0"
   }
