--- a/package.json
+++ b/package.json
@@ -33,12 +33,19 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.15.1",
+    "prettier-eslint": "^8.8.1",
     "supertest": "^3.0.0",
     "webpack": "^3.11.0"
   }
