--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "server-dev": "nodemon ./server/index.js",
-    "react-dev": "webpack -w"  },
+    "react-dev": "webpack -w"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/beeskneez/notreddit.git"
