--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-<<<<<<< HEAD
     "server-dev": "nodemon ./server/index.js",
     "react-dev": "webpack -w"
-=======
-    "server-dev": "nodemon ./server/index.js"
->>>>>>> Add Sequelize and postgres
   },
   "repository": {
     "type": "git",
@@ -26,8 +22,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "pg": "^7.4.1",
-    "pg-format": "^1.0.4",
+    "mysql2": "^1.5.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
