--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server-dev": "nodemon ./server/index.js",
+    "server-dev": "nodemon ./server/server.js",
     "react-dev": "webpack -w"
   },
   "repository": {
@@ -36,6 +36,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.18.1",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.15.1",
