--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ services:
   - mysql
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
+before_script:
+  - sleep 15
 script:
   - npm test
