--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "server-dev": "nodemon ./server/index.js",
+    "server-dev": "nodemon ./server/server.js",
     "react-dev": "webpack -w"
   },
   "repository": {
