(travis) testing with sleep

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ services:
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
 before_script:
-  - sleep 15
+  - sleep 10
 script:
-  - npm run react-dev
-  - npm run server-dev
+  - npm run server-dev &
+  - sleep 10
+  - npm run react-dev &
+  - sleep 10
