--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "firebase": "^4.10.1",
+    "moment": "^2.21.0",
     "mysql2": "^1.5.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
