--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^4.10.1",
     "moment": "^2.21.0",
     "mysql2": "^1.5.2",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
