--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "sequelize": "^4.33.4"
+    "sequelize": "^4.33.4",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -40,14 +41,18 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.18.1",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "morgan": "^1.9.0",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.15.1",
     "prettier-eslint": "^8.8.1",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "supertest": "^3.0.0",
     "webpack": "^3.11.0"
   }
