--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "server-dev": "nodemon ./server/server.js",
-    "react-dev": "webpack -w"
+    "react-dev": "webpack -w",
+    "start:all": "concurrently \"yarn react-dev\" \"yarn server-dev\""
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.6.0",
     "express": "^4.16.2",
     "firebase": "^4.10.1",
     "moment": "^2.21.0",
@@ -32,6 +34,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-persist": "^5.10.0",
     "sequelize": "^4.33.4",
     "validator": "^10.4.0"
   },
